Remove z-index to fix overlay issue ...
tbh not sure what that z-index was solving but this fixes #727 without affecting anything related to bard or the date field (see cfc0edf) that i can notice

--- a/resources/sass/components/fieldtypes/bard.scss
+++ b/resources/sass/components/fieldtypes/bard.scss
@@ -15,7 +15,7 @@
 }
 
 .bard-fixed-toolbar {
-    @apply .bg-white .shadow-none rounded-t .border-b .text-sm flex items-start justify-between z-5;
+    @apply .bg-white .shadow-none rounded-t .border-b .text-sm flex items-start justify-between;
     position: sticky;
     top: 0;
     padding: 4px 8px;
